# ACore-2024

./: .gitignore  README.md
heap/src/: buddy_allocator.rs  heap_allocator.rs  lib.rs  mutex.rs  temp_mut.rs
kernel/src/: main.rs
os/: .gitignore  Cargo.toml  Makefile  build.rs
os/.cargo/: config
os/src/: batch.rs  config.rs  entry.asm  lang_items.rs  link_app.s  linker.ld  main.rs  sbi.rs
os/src/heap/: buddy_allocator.rs  heap_allocator.rs  kmem_cache.rs  linked_list.rs  mod.rs  slub_allocator.rs
os/src/io/: console.rs  mod.rs  uart.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page_table.rs  range.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  kernel_stack.rs  loader.rs  manager.rs  mod.rs  pid.rs  processor.rs  switch.rs  switch.s  task.rs
os/src/time/: interrupt.s  mod.rs
os/src/trap/: context.rs  mod.rs  trap.S
usr/: Cargo.toml  Makefile
usr/.cargo/: config
usr/src/: config.rs  console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
