[package]
name = "os"
version = "0.1.0"
edition = "2021"

#[dependencies]
## temp attempt of RustSBI
#sbi-rt = { version = "0.0.3", features = ["legacy"] }

[dependencies]
volatile = "0.5.2"
bitflags = "2.5.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.9.1"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
